<resources>
    <string name="app_name">lesson 1</string>
    <string name="login">Вход</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="comm">Выполните вход или зарегистрируйтесь!</string>
    <string name="email">Введите вашу почту</string>
    <string name="pass">Введите пароль</string>
    <string name="enter">Войти</string>
    <string name="passforg">Забыли пароль?</string>
    <string name="clickhere">Нажми сюда!</string>
</resources>