<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:fontFamily="sans-serif"
        android:paddingVertical="70dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/belyi"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/wlcm"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fontFamily="sans-serif"
        android:paddingVertical="15dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/belyi"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/login"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="270dp" />

    <TextView
        android:id="@+id/comm"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif"
        android:text="@string/comm"
        android:textAlignment="center"
        android:textColor="@color/belyi"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wlcm"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="340dp" />

    <EditText
        android:id="@+id/eml"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/radius"
        android:backgroundTint="#fff"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comm" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/radius"
        android:backgroundTint="#F3EEEE"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eml"
        tools:layout_editor_absoluteY="439dp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/radius"
        android:backgroundTint="#716F6C"
        android:enabled="false"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
       />

    <EditText
        android:id="@+id/passforg"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/passforg"
        android:textColor="@color/bely"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@+id/btn"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="120dp" />

    <EditText
        android:id="@+id/ckick"
        android:layout_width="88dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:text="@string/clickhere"
        android:textColor="@color/orange1"
        android:textSize="12dp"
        app:layout_constraintStart_toEndOf="@+id/passforg"
        app:layout_constraintTop_toBottomOf="@+id/btn" />

</androidx.constraintlayout.widget.ConstraintLayout>